# gvm-auth-lib

./: .dockerignore  .gitignore  CMakeLists.txt  Cargo.toml  README.md  cliff.toml
.devcontainer/: Dockerfile  devcontainer.json
.docker/: Dockerfile
.github/: CODEOWNERS
.github/actions/install-cgreen-with-sudo/: action.yml
.github/workflows/: auto-merge.yml  build-and-tests.yaml  container.yml  deploy-crates.yml  lint.yaml  release.yml  unit-tests.yaml
gvm-auth/: Cargo.toml
gvm-auth-c/: CMakeLists.txt  Cargo.toml  build.rs  c_header_top.txt  libgvm_auth.pc.in
gvm-auth-c-lib/: Cargo.toml  build.rs  c_header_top.txt
gvm-auth-c-lib/src/: jwt.rs  lib.rs  strings.rs
gvm-auth-c-lib/tests/: jwt.c
gvm-auth-c/src/: c_ffi_macros.rs  jwt.rs  lib.rs  oauth2.rs  strings.rs
gvm-auth-c/tests/: CMakeLists.txt  jwt.c  oauth2.c  version.c
gvm-auth-cli/: Cargo.toml
gvm-auth-cli/src/: cliparser.rs  main.rs
gvm-auth-lib/: Cargo.toml
gvm-auth-lib/src/: jwt.rs
gvm-auth/src/: clock.rs  jwt.rs  lib.rs  oauth2.rs
test-data/: ecdsa-private.pem  ecdsa-public.pem  generate-data-headers.py  generate-ecdsa.sh  generate-rsa.sh  generate-secret.sh  rsa-private.pem  rsa-public.pem  test_data.h
