[workspace]
members = [ "gvm-auth", "gvm-auth-c-lib", "gvm-auth-cli" ]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "Authentication library for Greenbone Vulnerability Manager"
repository = "https://github.com/greenbone/gvm-auth-lib"
license = "AGPL-3.0-or-later"

[workspace.dependencies]
gvm-auth = { path = "./gvm-auth" }
chrono = "0.4.43"
clap = { version = "4.5.54", features = ["derive", "env"] }
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
