[workspace]
members = ["gvm-auth", "gvm-auth-c", "gvm-auth-cli"]
resolver = "3"

[workspace.package]
version = "0.2.0"
edition = "2024"
description = "Authentication library for Greenbone Vulnerability Manager"
repository = "https://github.com/greenbone/gvm-auth-lib"
license = "GPL-3.0-or-later"
readme = "README.md"

[workspace.dependencies]
gvm-auth = { path = "./gvm-auth", version = ">=0.1" }
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive", "env"] }
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
oauth2 = { version = "5.0.0", features = ["reqwest", "reqwest-blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros"] }
thiserror = "2.0.18"
url = "2.5.8"
tiny_http = "0.12.0"
