[package]
name = "gvm-auth-c"
version.workspace = true
edition.workspace = true
description = "C Wrapper for the gvm-auth library"
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]
name = "gvm_auth"

[[bin]]
name = "gvm-auth-test-server"
path = "src/bin/gvm_auth_test_server.rs"

[features]
default = ["headers"]
headers = []

[dependencies]
gvm-auth = { workspace = true }
chrono = { workspace = true }
jsonwebtoken = { workspace = true }
serde = { workspace = true }
tiny_http = { workspace = true }

[build-dependencies]
build-print = "1.0.1"
cbindgen = "0.29.2"
cc = "1.2.54"

[dev-dependencies]
httpmock = "0.8.3"
