[package]
name = "gvm-auth"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[lib]
crate-type = ["lib"]

[dependencies]
chrono = { workspace = true }
jsonwebtoken = { workspace = true }
serde = { workspace = true }
oauth2 = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

[dev-dependencies]
httpmock = "0.8.3"
